[package]
name = "quicknote-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
responder = "0.1.92"
serde = { version = "1.0.149", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.89"
dotenv = "0.15.0"
lazy_static = "1.4.0"

# Mongo Database
[dependencies.mongodb]
mongodb = "2.1.0"
default-features = false
features = ["sync"]
