[package]
name = "quicknote-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
responder = "0.1.982"
serde = { version = "1.0.149", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.89"
dotenv = "0.15.0"
lazy_static = "1.4.0"

# UUID-generator
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# Mongo Database
[dependencies.mongodb]
mongodb = "2.1.0"
default-features = false
features = ["sync"]
